<resources>
    <string name="app_name">Gladium</string>
    <string name="default_gladiator_name">Gladiator</string>
    <string name="gold_home">Gold:</string>
    <string name="shield_home">Shield:</string>
    <string name="weapon_home">Weapon:</string>
    <string name="hp_home">HP:</string>
    <string name="age_home">Age:</string>
    <string name="title_home">Title:</string>
    <string name="Arena">Arena</string>
    <string name="Shop">Shop</string>
    <string name="Abilities">Abilities</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="Health">Health</string>
    <string name="Strength">Strength</string>
    <string name="Skill">Skill</string>
    <string name="Points_left">Points left</string>
    <string name="Title">Title</string>
    <string name="Age">Age</string>
    <string name="Gold">Gold</string>
    <string name="Level">Level</string>
    <string name="Return">Return</string>
    <string name="Fight">Fight</string>
    <string name="ResetHP">Reset HP</string>
    <string name="remove_gladiator">Remove Gladiator</string>
    <string name="update_into">Update into</string>
    <string name="Buy">Buy</string>
</resources>
