<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/item_nameTV"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:padding="3dp"
        android:text="@string/Name"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/item_costTV"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:ems="10"
        android:padding="3dp"
        android:text="@string/Level"
        android:textSize="18sp" />

    <Button
        android:id="@+id/item_buyBT"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:text="@string/Buy" />
</LinearLayout>